--- a/LibraryManagement/useroptions.ui
+++ b/LibraryManagement/useroptions.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>userOptions</class>
- <widget class="QMainWindow" name="userOptions">
+ <class>UserOptions</class>
+ <widget class="QMainWindow" name="UserOptions">
   <property name="geometry">
    <rect>
     <x>0</x>
