--- a/LibraryManagement/edituser.ui
+++ b/LibraryManagement/edituser.ui
@@ -29,7 +29,7 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
+  <widget class="QLineEdit" name="nameLE">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -39,7 +39,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_2">
+  <widget class="QLineEdit" name="usernameLE">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -49,7 +49,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_3">
+  <widget class="QLineEdit" name="cardNumberLE">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -59,7 +59,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QCheckBox" name="checkBox">
+  <widget class="QCheckBox" name="staffCB">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -111,7 +111,7 @@
     <string>Card Number</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_4">
+  <widget class="QLineEdit" name="addressLE">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -134,7 +134,7 @@
     <string>Address</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_5">
+  <widget class="QLineEdit" name="phoneLE">
    <property name="geometry">
     <rect>
      <x>40</x>
