Stability and bug fixes

--- a/LibraryManagement/useroptions.ui
+++ b/LibraryManagement/useroptions.ui
@@ -301,7 +301,7 @@
              <item>
               <widget class="QPushButton" name="borrowBookButton">
                <property name="sizePolicy">
-                <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
@@ -317,13 +317,20 @@
                 <bool>true</bool>
                </property>
                <property name="sizePolicy">
-                <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
                </property>
                <property name="text">
                 <string>Return Book</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="reminderCB">
+               <property name="text">
+                <string>Remind Me</string>
                </property>
               </widget>
              </item>
