--- a/LibraryManagement/edituser.ui
+++ b/LibraryManagement/edituser.ui
@@ -59,19 +59,6 @@
     </rect>
    </property>
   </widget>
-  <widget class="QCheckBox" name="staffCB">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>220</y>
-     <width>70</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Staff</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
@@ -171,7 +158,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>50</y>
+     <y>53</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -179,6 +166,52 @@
    <property name="text">
     <string>Password</string>
    </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBox">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>100</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Show Password</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="horizontalLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>120</y>
+     <width>67</width>
+     <height>91</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QRadioButton" name="userRB">
+      <property name="text">
+       <string>User</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QRadioButton" name="staffRB">
+      <property name="text">
+       <string>Staff</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QRadioButton" name="managerRB">
+      <property name="text">
+       <string>Manager</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
