--- a/LibraryManagement/useroptions.ui
+++ b/LibraryManagement/useroptions.ui
@@ -235,6 +235,13 @@
            </property>
           </spacer>
          </item>
+         <item>
+          <widget class="QPushButton" name="oldPB">
+           <property name="text">
+            <string>Old Books</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
        <item>
